prototype with nio-multipart-parser #911